Add image to post

--- a/app/views/authors/posts/_form.html.erb
+++ b/app/views/authors/posts/_form.html.erb
@@ -20,6 +20,15 @@
     <%= form.label :description %>
     <%= form.text_area :description, class: 'form-control' %>
   </div>
+  
+  <div class="form-group">
+    <%= form.label :header_image %>
+    <% if post.header_image.present? %>
+      <%= image_tag(post.header_image, width: '100%') %>
+    <% else %>
+      <%= form.file_field :header_image, class: 'form-control' %>
+    <% end %>
+  </div>
 
   <div class="actions">
     <%= form.submit class: 'btn btn-primary btn-block' %>
