Add Stimulus Reflex

--- a/app/javascript/stylesheets/_base.scss
+++ b/app/javascript/stylesheets/_base.scss
@@ -10,7 +10,16 @@
   .image {
     text-align: center;
     img {
-      max-width: 80%;
+      max-width: 90%;
+    }
+  }
+
+  .post-card {
+    .header-image {
+      width: 100%;
+      height: 100px;
+      background-size: cover;
+      background-position: center;
     }
   }
 }
