--- a/app/views/authors/posts/edit.html.erb
+++ b/app/views/authors/posts/edit.html.erb
@@ -2,13 +2,15 @@
   <div class="col-md-3">
     <%= link_to 'Back', posts_path, class: 'btn btn-secondary mb-3' %>
     <div class="card">
+      <div class="card-header">
+        <h6 class="card-title mb-0">Editing post</h6>
+      </div>
       <div class="card-body">
-        <h4 class="card-title">Editing post</h4>
         <%= render 'form', post: @post %>
       </div>
       <div class="card-footer">
         <% if @post.published? %>
-          <a href="#" 
+          <a href="#"
             class="btn btn-secondary btn-block"
             data-reflex="click->PublisherReflex#unpublish"
             data-post-id="<%= @post.id %>">
@@ -39,6 +41,13 @@
     </div>
 
     <div class="card">
+      <div class="card-header text-right">
+        <% if @post.published? %>
+          <b>Published</b> <%= time_ago_in_words(@post.published_at) %> ago
+        <% else %>
+          Unpublished
+        <% end %>
+      </div>
       <div class="card-body pt-5">
         <% @post.elements.each do |element| %>
           <% if element.persisted? %>
