--- a/app/views/authors/posts/edit.html.erb
+++ b/app/views/authors/posts/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-3">
-    <%= link_to 'Back', posts_path, class: 'btn btn-secondary mb-3' %>
+    <%= link_to 'Back', posts_path, class: 'btn btn-dark mb-3' %>
     <div class="card">
       <div class="card-header">
         <h6 class="card-title mb-0">Editing post</h6>
@@ -31,14 +31,14 @@
     <div class="mb-3">
       <%= form_with(model: [@post, @element], html: { class: 'float-left mr-2' }) do |form| %>
         <%= form.hidden_field :element_type, value: 'paragraph' %>
-        <%= button_tag(type: 'submit', class: 'btn btn-dark') do %>
+        <%= button_tag(type: 'submit', class: 'btn btn-secondary') do %>
           <i class="fas fa-paragraph"></i>
         <% end %>
       <% end %>
       
       <%= form_with(model: [@post, @element]) do |form| %>
         <%= form.hidden_field :element_type, value: 'image' %>
-        <%= button_tag(type: 'submit', class: 'btn btn-dark') do %>
+        <%= button_tag(type: 'submit', class: 'btn btn-secondary') do %>
           <i class="fas fa-images"></i>
         <% end %>
       <% end %>
