--- a/app/javascript/stylesheets/_base.scss
+++ b/app/javascript/stylesheets/_base.scss
@@ -12,6 +12,14 @@
     img {
       max-width: 90%;
     }
+    .delete-btn {
+      position: absolute;
+      right: calc(10% + 1px);
+      opacity: 0.7;
+      &:hover {
+        opacity: 1;
+      }
+    }
   }
 
   .post-card {
@@ -21,5 +29,10 @@
       background-size: cover;
       background-position: center;
     }
+  }
+
+  #elements {
+    list-style: none;
+    padding-left: 0;
   }
 }
