--- a/app/views/authors/posts/edit.html.erb
+++ b/app/views/authors/posts/edit.html.erb
@@ -55,7 +55,7 @@
 
       <div class="card-body pt-5" data-controller="elements">
         <ul id="elements" data-action="drop->elements#sort">
-          <% @post.elements.each do |element| %>
+          <% @post.elements.order(position: :asc).each do |element| %>
             <% if element.persisted? %>
               <li data-id="<%= element.id %>" class="element-item">
                 <% if element.paragraph? %>
